--- a/PROJE-1.html
+++ b/PROJE-1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">  <!--sitede calisan tum ozel karakterleri destekleyen char tool-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--sayfanin calistigi yere gore kendi olcusunu ayarlamasi icin-->
