--- a/PROJE-1.html
+++ b/PROJE-1.html
@@ -4,18 +4,88 @@
     <meta charset="UTF-8">  <!--sitede calisan tum ozel karakterleri destekleyen char tool-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--sayfanin calistigi yere gore kendi olcusunu ayarlamasi icin-->
 
-    <title>Hakkında</title>
-    <div>
-        <b>Polad Hatamov</b>
-        <button>Ana Sayfa</button>
-        <button>Şehrim</button>
-        <button>Mirasımız</button>
-        <button>Özgeçmiş</button>
-        <button>İletişim</button>
-    </div> 
+    <title>Ana sayfa</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="#">
+   
 
 </head>
-<body>
-    
+<body >
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container">
+          <a class="navbar-brand" href="#">Polad<span class="text-warning">Hatamov</span></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Ana Sayfa</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Şehrim</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Mirasımız</a>
+              </li>
+                           <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Özgeçmiş</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">İletişim</a>
+              </li>
+            </ul>
+        </div>
+        </div>
+      </nav>
+
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img2.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 style="color:salmon;">Cyber Security</h5>
+              <p>Hayellerim için seçtiğim yol.</p>
+              <p><a href="#" class="btn btn-warning mt-3">Daha Fazla..</a></p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img3.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Piyano</h5>
+              <p>Sakinlemek için ideal arkadaş</p>
+              <p><a href="#" class="btn btn-warning mt-3">Daha Fazla..</a></p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>FootBall</h5>
+              <p>Top,Ben ve sadece Saha... </p>
+              <p><a href="#" class="btn btn-warning mt-3">Daha Fazla..</a></p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+
+
+
+    <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+ 
 </body>
 </html>
